--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0"
   }
