--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {},
   "peerDependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.9.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
