--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "removeComments": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true
