--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tri-state-checkbox",
-  "version": "0.1.2",
+  "version": "0.2.0-alpha.0",
   "description": "Mixed-state checkbox for React",
   "main": "dist/index.js",
   "scripts": {
