--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "downlevelIteration": true
   },
   "include": ["src/*"],
   "exclude": ["node_modules"]
