--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.1.0",
     "eslint-plugin-react": "^7.14.3",
     "react": "^16.9.0",
